# caffe_extended

./: CMakeLists.txt
examples/mnist/: lenet_solver.prototxt  lenet_train_test.prototxt  mnist_autoencoder.prototxt  my_lenet_train_test.prototxt  train_lenet.sh  train_mnist_autoencoder.sh
experiment/: CMakeLists.txt  lenet_generate.prototxt  lenet_solver.prototxt  main.cpp
include/caffe/: blob.hpp  filler.hpp
include/caffe/layers/: extended_convolution_layer.hpp  extended_image_layer.hpp  extended_pool_layer.hpp
include/caffe/util/: im2col.hpp
src/caffe/layers/: extended_convolution_layer.cpp  extended_convolution_layer.cu  extended_image_layer.cpp  extended_pooling_layer.cpp  extended_pooling_layer.cu
src/caffe/proto/: caffe.proto
src/caffe/test/: test_extended_convolution_layer.cpp  test_extended_pooling_layer.cpp
src/caffe/util/: im2col.cpp  im2col.cu
train_visualization/: CMakeLists.txt  network_wrapper.cpp  network_wrapper.h  train_visualization_main.cpp
train_visualization/qml/: LayerTab.qml  Main.qml  Protocol.qml  ScrollBar.qml
visualization/: CMakeLists.txt  trackVideo.qrc
visualization/qml/: Layer.qml  Main.qml
